--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TinDog</title>
+  <title>Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
   rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
@@ -45,13 +45,13 @@
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/image_1.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="400" loading="lazy">
+          <img src="./images/image_1.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="400" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Dobrodošli na moj probni sajt!</h1>
           <h2>Ja sam Vladan Simić, a ovde možete saznati više o meni</h2>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">O meni</button>
+            <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">O meni</button>
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="fs-2 text-body-emphasis"><a href="#">Prva tema</a></h3>
+            <h3 class="fs-2 text-body-emphasis"><a href="#" class="link-dark">Prva tema</a></h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
             
           </div>
@@ -82,7 +82,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="fs-2 text-body-emphasis"><a href="#">Druga tema</a></h3>
+            <h3 class="fs-2 text-body-emphasis"><a href="#" class="link-dark">Druga tema</a></h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
             
           </div>
@@ -94,7 +94,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="fs-2 text-body-emphasis"><a href="#">Treća tema</a></h3>
+            <h3 class="fs-2 text-body-emphasis"><a href="#" class="link-dark">Treća tema</a></h3>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
           </div>
         </div>
@@ -107,10 +107,10 @@
     <div class="my-5">
       <div class="p-5 text-center bg-body-tertiary">
         <div class="container py-5">
-          <h2 class="text-body-emphasis">"Poznati citati... Citat broj 1..."</h2>
-          <h2 class="text-body-emphasis">"Poznati citati... Citat broj 2..."</h2>
-          <h2 class="text-body-emphasis">"Poznati citati... Citat broj 3..."</h2>
-          <h2 class="text-body-emphasis">"Poznati citati... Citat broj 4..."</h2>          
+          <h2 class="text-warning">"Poznati citati... Citat broj 1..."</h2>
+          <h2 class="text-warning">"Poznati citati... Citat broj 2..."</h2>
+          <h2 class="text-warning">"Poznati citati... Citat broj 3..."</h2>
+          <h2 class="text-warning">"Poznati citati... Citat broj 4..."</h2>          
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
+              <div class="card-header py-3 text-bg-dark border-primary">
                 <h4 class="my-0 fw-normal">Proizvod 1</h4>
               </div>
               <div class="card-body">
@@ -141,13 +141,13 @@
                   <li>Osobina 3</li>
                   <li>Osobina 4</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Poručite</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary">Poručite</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
+              <div class="card-header py-3 text-bg-dark border-primary">
                 <h4 class="my-0 fw-normal">Proizvod 2</h4>
               </div>
               <div class="card-body">
@@ -158,13 +158,13 @@
                   <li>Osobina 3</li>
                   <li>Osobina 4</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Poručite</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary">Poručite</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
+              <div class="card-header py-3 text-bg-dark border-primary">
                 <h4 class="my-0 fw-normal">Proizvod 3</h4>
               </div>
               <div class="card-body">
@@ -175,7 +175,7 @@
                   <li>Osobina 3</li>
                   <li>Osobina 4</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Poručite</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary">Poručite</button>
               </div>
             </div>
           </div>
